--- a/src/FantasyFootball.Maui/Resources/Styles.xaml
+++ b/src/FantasyFootball.Maui/Resources/Styles.xaml
@@ -42,9 +42,19 @@
     Glyph="{x:Static fonts:IconFont.Add_circle_outline}"
     Color="Black" />
   <FontImageSource
+    x:Key="DeleteIcon"
+    FontFamily="MaterialIcons"
+    Glyph="{x:Static fonts:IconFont.Delete_forever}"
+    Color="Black" />
+  <FontImageSource
     x:Key="PlayIcon"
     FontFamily="MaterialIcons"
     Glyph="{x:Static fonts:IconFont.Play_circle}"
+    Color="Black" />
+  <FontImageSource
+    x:Key="SimulateFiveIcon"
+    FontFamily="MaterialIcons"
+    Glyph="{x:Static fonts:IconFont.Forward_5}"
     Color="Black" />
   <FontImageSource
     x:Key="ReplayIcon"
