--- a/src/FantasyFootball.Maui/Views/CompetitionsPage.xaml
+++ b/src/FantasyFootball.Maui/Views/CompetitionsPage.xaml
@@ -35,7 +35,7 @@
         Grid.Column="1"
         HorizontalOptions="FillAndExpand"
         ItemsSource="{Binding Years}"
-        SelectedItem="{Binding SelectedYear}" />
+        SelectedItem="{Binding SelectedYear, Mode=TwoWay}" />
       <Label
         Grid.Row="2"
         HorizontalOptions="End"
