--- a/src/FantasyFootball.Maui/Views/CompetitionsPage.xaml
+++ b/src/FantasyFootball.Maui/Views/CompetitionsPage.xaml
@@ -70,7 +70,7 @@
         <DataTemplate x:DataType="model:Competition">
           <VerticalStackLayout>
             <VerticalStackLayout.GestureRecognizers>
-              <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type vm:CompetitionsViewModel}}, Path=OpenCompetitionCommand}" CommandParameter="{Binding Id}" />
+              <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type vm:CompetitionsViewModel}}, Path=OpenCompetitionCommand}" CommandParameter="{Binding .}" />
             </VerticalStackLayout.GestureRecognizers>
             <StackLayout Orientation="Horizontal">
               <Label Margin="0,0,10,0" VerticalOptions="Center" Text="{Binding Id}" />
